# VectorDB-Benchmarker

./: .env.example  .gitignore  README.md  pyproject.toml  replace_script.py  requirements.txt  run_benchmark.py
rag_data/lightrag_1770119613/: kv_store_doc_status.json  kv_store_full_docs.json
rag_data/lightrag_1770119641/: kv_store_doc_status.json  kv_store_full_docs.json
rag_data/lightrag_1770119701/: kv_store_doc_status.json  kv_store_full_docs.json
rag_data/lightrag_1770120184/: kv_store_doc_status.json  kv_store_full_docs.json
results/rag/: lightrag_20260203_125359.json  lightrag_20260203_125414.json  lightrag_20260203_125713.json  lightrag_20260203_130512.json
src/arabic_rag_bench/: __init__.py  benchmark.py  config.py
src/arabic_rag_bench/embeddings/: __init__.py  gemini.py  registry.py  sentence_transformers_embed.py
src/arabic_rag_bench/frameworks/: base.py  benchmark.py  langchain_framework.py  llamaindex_framework.py  raganything_framework.py
src/arabic_rag_bench/metrics/: __init__.py  benchmark_metrics.py
src/arabic_rag_bench/vectordb/: __init__.py  base.py  chromadb.py  elasticsearch_db.py  faiss_db.py  milvus_db.py  pgvector_db.py  pinecone_db.py  qdrant_db.py  redis_db.py  turbopuffer_db.py  vald_db.py  weaviate_db.py
src/rag_benchmark/: __init__.py  benchmark.py  cli.py  config.py
src/rag_benchmark/embeddings/: __init__.py  base.py  openai_embed.py  sentence_transformers_embed.py
src/rag_benchmark/frameworks/: __init__.py  base.py  (+2 more)
test_lightrag_debug/: kv_store_doc_status.json  kv_store_full_docs.json
tests/: test_metrics.py
(+15 files in other folders)
