[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_benchmark"
version = "0.1.0"
description = "Extensible benchmarking tool for Vector Databases and RAG systems."
authors = [
  { name="RAG Bench Team" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pinecone-client>=3.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rag-bench = "rag_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_benchmark*"]
